# CG-VC_2025-2026

Project CG & VC 2025-2026/: .~lock.Verslag.docx#  Bezier.cpp  Bezier.h  BezierVisualiser.cpp  BezierVisualiser.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ChromaKeyOverlay.cpp  ChromaKeyOverlay.h  FollowCam.cpp  FollowCam.h  FreeCam.cpp  FreeCam.h  Project CG & VC 2025-2026.sln  Project CG & VC 2025-2026.vcxproj  Project CG & VC 2025-2026.vcxproj.filters  Verslag.docx  bloom_combiner_fragment.glsl  blur_fragment.glsl  brightness_fragment.glsl  camera.cpp  camera.h  chroma_key_frag.glsl  chroma_key_vert.glsl  fragment_shader.glsl  lichtbron.cpp  lichtbron.h  main.cpp  object.cpp  object.h  postProcessor.cpp  postProcessor.h  post_process_fragment.glsl  road.cpp  road.h  shader.cpp  shader.h  (+2 more)
Project CG & VC 2025-2026/Project .11c086ee/x64/Debug/: Project CG & VC 2025-2026.exe.recipe  Project CG & VC 2025-2026.ilk  Project CG & VC 2025-2026.vcxproj.FileListAbsolute.txt  vc143.idb
Project CG & VC 2025-2026/Project .11c086ee/x64/Debug/Project .11c086ee.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project CG & VC 2025-2026.lastbuildstate  Project CG & VC 2025-2026.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Project CG & VC 2025-2026/cmake/modules/: Findassimp.cmake  assimpTargets-none.cmake  assimpTargets.cmake
